# PlasFlow

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.web  README.md  README_v2.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: OPERATIONS.md  PlasFlow v2.docx
plasflow-web/: index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
plasflow-web/e2e/: job-flow.spec.ts
plasflow-web/e2e/fixtures/: smoke-small.fasta
plasflow-web/src/: App.tsx  styles.css
scripts/: check_accuracy_gate.py  run_modern_benchmark.py  run_modern_train_eval.py  setup_dev_env.sh
src/plasflow_v2/: __init__.py  classifier.py  cli.py  comparison.py  constants.py  datasets.py  evaluation.py  features.py  io.py  legacy_runner.py  metrics.py  pipeline.py  preprocessing.py  reporting.py  tools.py  training.py
src/plasflow_v2/api/: app.py  db.py  worker.py
tests/: test_accuracy_utils.py  test_api.py  test_comparison.py  test_datasets.py  test_io.py  test_pipeline.py  test_preprocessing.py  test_tools.py
tests/fixtures/benchmark/: benchmark_dataset.tsv  benchmark_manifest.json
